--- a/plugin.yml
+++ b/plugin.yml
@@ -1,6 +1,6 @@
 name: BattleRoyale
 main: ru.sooslick.royale.royale
-version: 0.2.0.7
+version: 0.2.0.9
 author: sooslick
 commands:
   royale:
@@ -12,7 +12,7 @@ commands:
     usage: /zone
   votestart:
     description: vote to launch royale game
-    aliases: v
+    aliases: v, vs
     usage: /votestart
   squad:
     description: manages player's squads
