bugfix #7: csd, renderer, squads

--- a/config.yml
+++ b/config.yml
@@ -1,13 +1,13 @@
+RoyaleProcessorFrequency: 20
 StartZoneSize: 2048
 PreStartZoneSize: 2055
-PreStartTimer: 60
-EndZoneSize: 100
 NewZoneSizeMultiplier: 0.5
+PreStartTimer: 60
 StartTimer: 300
-RoyaleProcessorFrequency: 20
 WaitMultiplier: 0.75
 ShrinkMultiplier: 0.67
 EnableCenterOffset: true
+EndZoneSize: 100
 LavaFlowZoneSize: 16
 LavaFlowSpeed: 20
 EnableRedzone: true
@@ -18,13 +18,13 @@ FirstRedzoneTime: 350
 RedzoneMinPause: 40
 RedzoneMaxPause: 90
 RedzoneMinZoneSize: 250
-EnableMonsters: true
-EnableMonstersTime: 310
 ZoneStartDamage: 0.01
 ZoneDamageMultiplier: 2
 GiveZoneMap: true
 EnableElytraStart: true
 StartFallHeight: 1600
+EnableMonsters: true
+EnableMonstersTime: 310
 MonsterSpawns:
   ZOMBIE: 0.75
   SKELETON: 0.5
@@ -35,5 +35,7 @@ MonsterSpawns:
   HUSK: 0.5
 MinVotestarts: 3
 MinVotestartPercent: 0.5
-PostGameShutDown: true
-PostGameShutDownTime: 60
+PostGameCommandEnable: true
+PostGameCommandTime: 60
+PostGameCommand: stop
+MaxSquadMembers: 4
